--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,15 @@
+html,
 body {
   margin: 0;
   padding: 0;
+  min-height: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
   background-image: url("./assets/background.jpeg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  font-family: Arial, Helvetica, sans-serif;
+  background-attachment: fixed;
 }
