--- a/src/layouts/landing-page/landing-page.css
+++ b/src/layouts/landing-page/landing-page.css
@@ -10,3 +10,48 @@
 .landing-page-paragraph {
   font-size: 1.2rem;
 }
+
+/* Style for the overlay */
+.navbar-collapse {
+  display: none;
+  transition: all 0.3s ease-in-out;
+}
+
+.navbar-collapse.show {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.9);
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  z-index: 9999;
+  padding-bottom: 5rem;
+}
+
+/* Style for the navbar items in the overlay */
+.navbar-collapse.show .navbar-nav {
+  flex-direction: column;
+  width: 100%;
+  text-align: center;
+}
+
+/* Style for the buttons when the menu is open */
+.navbar-collapse .p-button {
+  margin-bottom: 1rem;
+}
+
+/* Style for the language icons in the overlay */
+.navbar-collapse.show .language-icons {
+  margin-top: 1.25rem;
+}
+
+/* Style for the close button */
+.btn-close-white {
+  position: absolute;
+  top: 1.2rem;
+  right: 1.2rem;
+  color: white;
+}
