tos language and css fixes

--- a/src/layouts/components/custom-file-uploader/custom-file-upload.css
+++ b/src/layouts/components/custom-file-uploader/custom-file-upload.css
@@ -23,3 +23,10 @@
     max-width: 5rem;
   }
 }
+
+.term-condition {
+  width: "100%";
+  display: flex;
+  justify-content: flex-end;
+  font-size: 0.8rem;
+}
