--- a/src/layouts/terms-of-service/terms-of-service.css
+++ b/src/layouts/terms-of-service/terms-of-service.css
@@ -1,3 +1,4 @@
 .tos-paragraph {
   font-size: 1.2rem;
+  text-shadow: 1px 1px 2px rgba(249, 246, 246, 1); /* used for the mobile in synergy with the background image */
 }
